--- a/src/app/shared/data-grid/data-grid.component.html
+++ b/src/app/shared/data-grid/data-grid.component.html
@@ -17,7 +17,7 @@
                 </td>
             </tr>
         </tbody>
-        <tfoot>
+        <tfoot *ngIf="showTimeStamp == true">
             Ostatnio odświeżono: {{elapsedTime | async}}
         </tfoot>
     </table>
