--- a/src/app/shared/data-grid/data-grid.component.css
+++ b/src/app/shared/data-grid/data-grid.component.css
@@ -1,7 +1,9 @@
 .layout-root {
-    max-height: 100%;
     overflow-y: scroll;
     user-select: none;
+    display: flex;
+    flex: 1 1 auto;
+    background: lightsteelblue;
 }
 
 table {
