--- a/src/app/shared/data-grid/data-grid.component.html
+++ b/src/app/shared/data-grid/data-grid.component.html
@@ -1,4 +1,5 @@
 <div class="layout-root">
+    <div class="label">Result set</div>
     <table class="table-bordered" *ngIf="!isWaitIndicatorVisible">
         <thead>
             <tr>
