--- a/src/app/shared/editor/editor.component.html
+++ b/src/app/shared/editor/editor.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-    <div class="editor" contentEditable="true" (keyup)="onF5KeyUp($event)" [textContent]="text">
-
+    <div class="label">Query</div>
+    <div class="editor" contentEditable="true" (keyup)="onF5KeyUp($event)" (input)="onTextInput($event)">
+        {{text}}
     </div>
 </div>
