--- a/src/app/shared/ribbon/ribbon.component.html
+++ b/src/app/shared/ribbon/ribbon.component.html
@@ -1,4 +1,5 @@
 <div class="container" aria-label="SimpleSQL">
+    <div class="label">Main</div>
     <div class="page" aria-label="Main">
         <div class="group" aria-label="Command">
             <button>F5 - Execute</button>
