--- a/src/app/shared/editor/editor.component.html
+++ b/src/app/shared/editor/editor.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="label">Query</div>
-    <div class="editor" contentEditable="true" (keyup)="onF5KeyUp($event)" (input)="onTextInput($event)">
-        {{text}}
+    <div class="editor" contentEditable="true" (input)="onTextInput($event)">
+
     </div>
 </div>
