--- a/src/app/shared/ribbon/ribbon.component.html
+++ b/src/app/shared/ribbon/ribbon.component.html
@@ -3,7 +3,13 @@
     <div class="page" aria-label="Main">
         <div class="group" aria-label="Command">
             <button>F5 - Execute</button>
-            <button>Ctrl+R - Show/Hide grid</button>
+            <button>Ctrl+S - Save</button>
+            <button>Ctrl+Shift+S - Save all</button>
+        </div>
+        <div class="group" aria-label="Interactions">
+            <button>Ctrl+R - Show/Hide output</button>
+            <button>Ctrl+N - New query</button>
+            <button>Ctrl+W - Write script</button>
         </div>
     </div>
 </div>
