--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="show" class="modal">
     <header class="header">
         <h2>{{title}}</h2>
-        <button class="close-btn" (click)="close()">x</button>
+        <button class="close-btn" (click)="close()">X</button>
     </header>
     <div class="modal-body">
         <ng-content></ng-content>
