--- a/src/app/shared/backdrop/backdrop.component.html
+++ b/src/app/shared/backdrop/backdrop.component.html
@@ -1,1 +1,1 @@
-<div class="backdrop" *ngIf="show" (click)="backDropClick()"></div>
+<div class="backdrop" *ngIf="isVisible" (click)="backDropClick()"></div>
