--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,8 @@
       </select>
     </div>
   </app-modal>
+  <app-wait-indicator [isVisible]="isWaitIndicatorVisible">
+  </app-wait-indicator>
   <div class="titleBar-container">
     <div class="title">
       SimpleSQL
@@ -31,7 +33,7 @@
   </div>
   <div class="main-content-container">
     <div class="explorer-container">
-      <app-tree-view>
+      <app-tree-view [itemsSource]="databases$">
       </app-tree-view>
     </div>
     <div class="module-container">
@@ -39,12 +41,12 @@
       </app-ribbon>
       <app-editor>
       </app-editor>
-      <app-data-grid [itemsSource]="resultSet">
+      <app-data-grid [itemsSource]="resultSet$">
       </app-data-grid>
       <router-outlet></router-outlet>
     </div>
   </div>
   <div class="footer-container">
-    <app-footer></app-footer>
+    <app-footer [databaseName]="databaseName$"></app-footer>
   </div>
 </div>
