--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="layout-root">
-    <span *ngIf="databaseName !== undefined">Zalogowano do bazy: {{databaseName | async}}</span>
+    <span *ngIf="databaseName !== undefined">Connected to database: {{databaseName | async}}</span>
 </div>
