BindableBase implementation, new property convention refactoring and critical sqlService changes.

--- a/src/app/shared/tree-view/tree-view.component.html
+++ b/src/app/shared/tree-view/tree-view.component.html
@@ -1,4 +1,6 @@
 <div class="layout-root">
     <span class="label">Server explorer</span>
-    
+    <div class="tree" *ngFor="let branch of itemsSource | async">
+        <div class="branch">{{branch.header}}</div>
+    </div>
 </div>
