--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,7 +41,8 @@
       </app-ribbon>
       <app-editor>
       </app-editor>
-      <app-data-grid [itemsSource]="resultSet$">
+      <app-data-grid [itemsSource]="resultSet$"
+                     [columnsSource]="['Id','Name','Test','Test 2','Test 3','Test 4','Test 5','Test 6']">
       </app-data-grid>
       <router-outlet></router-outlet>
     </div>
