--- a/src/app/shared/tree-view/tree-view.component.css
+++ b/src/app/shared/tree-view/tree-view.component.css
@@ -12,3 +12,13 @@
     margin-bottom: 5px;
     padding: 3px;
 }
+
+.tree {
+    display: flex;
+    flex-direction: column;
+}
+
+.branch {
+    display: block;
+    min-height: fit-content;
+}
