--- a/src/app/shared/wait-indicator/wait-indicator.component.css
+++ b/src/app/shared/wait-indicator/wait-indicator.component.css
@@ -21,6 +21,10 @@
     animation: lds-dual-ring 1.2s linear infinite;
   }
 
+  .invisible {
+    display: none;
+  }
+
   @keyframes lds-dual-ring {
     0% {
       transform: rotate(0deg);
