Finally established async SQLClient <> Observable dataflow. To be implemented.

--- a/src/app/shared/tree-view/tree-view.component.css
+++ b/src/app/shared/tree-view/tree-view.component.css
@@ -20,5 +20,11 @@
 
 .branch {
     display: block;
+    min-height: 10px;
     min-height: fit-content;
+}
+
+.branch:hover {
+    border: 1px;
+    border-color: black;
 }
