--- a/src/app/shared/data-grid/data-grid.component.html
+++ b/src/app/shared/data-grid/data-grid.component.html
@@ -8,9 +8,9 @@
         </thead>
         <tbody>
             <tr *ngFor="let item of itemsSource | async" 
-                (click)="onSelectedItemsChanged($event, item, item.Index)"
-                (mouseover)="onSelectionPending($event, item, item.Index)"
-                [className]="item.IsSelected === true ? 'selected' : 'unselected'">
+                (click)="onSelectedItemsChanged($event, item, item.index)"
+                (mouseover)="onSelectionPending($event, item, item.index)"
+                [className]="item.isSelected === true ? 'selected' : 'unselected'">
                 <td *ngFor="let f of fieldNameSource">
                     <span clss="normalizedCell">
                         {{item.getCellData(f)}}
