SQLClientService: Implemented generic result mapping api for single or [] output.

--- a/src/app/shared/tree-view/tree-view.component.css
+++ b/src/app/shared/tree-view/tree-view.component.css
@@ -20,11 +20,12 @@
 
 .branch {
     display: block;
-    min-height: 10px;
+    min-width: fit-content;
     min-height: fit-content;
 }
 
 .branch:hover {
     border: 1px;
     border-color: black;
+    background: lightyellow;
 }
