--- a/src/app/shared/editor/editor.component.html
+++ b/src/app/shared/editor/editor.component.html
@@ -1,6 +1,5 @@
 <div class="container">
     <div class="label">Query</div>
-    <div class="editor" contentEditable="true" (input)="onTextInput($event)">
-
-    </div>
+    <textarea class="editor" (input)="onTextInput($event)">
+    </textarea>
 </div>
