--- a/src/app/shared/editor/editor.component.css
+++ b/src/app/shared/editor/editor.component.css
@@ -8,14 +8,13 @@
     border: none;
     background: white;
     color: black;
-    flex: 1 1 auto;
     outline: none;
     padding: 3px;
-}
-
-[contentEditable='true'] {
-    caret-color: red;
+    overflow: auto;
+    white-space: nowrap;
     flex: 1 1 auto;
+    resize: none;
+    caret-color: red;
 }
 
 .label {
