--- a/src/app/shared/editor/editor.component.css
+++ b/src/app/shared/editor/editor.component.css
@@ -15,13 +15,15 @@
     flex: 1 1 auto;
     resize: none;
     caret-color: red;
+    font-weight: bold;
 }
 
 .label {
-    background: lightsteelblue;
+    background: #FCCF47;
     font-weight: bolder;
     padding: 3px;
     width: fit-content;
+    border-radius: 3px 3px 0px 0px;
 }
 
 .label:hover {
