--- a/src/app/shared/tree-view/tree-view.component.css
+++ b/src/app/shared/tree-view/tree-view.component.css
@@ -3,14 +3,16 @@
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
+    border-radius: 3px 3px 0px 0px;
     height: 100%;
 }
 
 .label {
-    background: lightsteelblue;
+    background: #FCCF47;
     font-weight: bold;
     margin-bottom: 5px;
     padding: 3px;
+    border-radius: 3px 3px 0px 0px;
 }
 
 .tree {
