--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -10,4 +10,4 @@
         <button class="button-result" (click)="apply($event)">Ok</button>
     </div>
 </div>
-<app-backdrop [isVisible]="isVisible" (clicked)="close()"></app-backdrop>
+<sm-backdrop [isVisible]="isVisible" (clicked)="close()"></sm-backdrop>
