--- a/src/app/shared/data-grid/data-grid.component.css
+++ b/src/app/shared/data-grid/data-grid.component.css
@@ -3,7 +3,6 @@
      display: flex;
      flex: 1 1 auto;
      flex-direction: column;
-     contain: strict;
  }
 
  .table-container {
@@ -38,6 +37,7 @@
      position: relative;
      border-collapse: collapse;
      background-color: white;
+     white-space: nowrap;
  }
 
  th,
@@ -54,6 +54,5 @@
      background: white;
      position: sticky;
      top: 0;
-     /* Don't forget this, required for the stickiness */
      box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
  }
