--- a/src/app/modules/inquiry/inquiry.component.css
+++ b/src/app/modules/inquiry/inquiry.component.css
@@ -1,40 +1,29 @@
-/* .layout-root {
-    font-family: Arial, Helvetica, sans-serif;
-    top: 0;
-    left: 0;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    width: 100vw;
-    height: 100vh;
-    user-select: none;
-    background: #1795A8;
-  } */
-
-  .layout-root {
+ .layout-root {
     display: grid;
     grid-template-rows: 1fr 4fr 5fr;
-    height: auto;
-    flex: 1 1 auto;
-    margin: 3px;
+    min-height: 100%;
   }
-  
-  app-ribbon {
+
+  .ribbon-container {
     margin-bottom: 3px;
     grid-row: 1;
   }
-  
-  app-editor {
+
+  .editor-container {
     flex: 1 1 auto;
     margin-bottom: 3px;
     display: flex;
     grid-row: 2;
   }
-  
-  app-data-grid {
+
+  .data-grid-container {
     flex: 1 1 auto;
-    display:flex;
+    display: flex;
     grid-row: 3;
+  }
+
+  sm-editor,
+  sm-data-grid,
+  sm-ribbon {
+    display: contents;
   }
