--- a/src/app/shared/data-grid/data-grid.component.html
+++ b/src/app/shared/data-grid/data-grid.component.html
@@ -8,7 +8,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let item of itemsSource | async" 
+                <tr *ngFor="let item of virtualizedItemsSource | async"
                     (click)="onSelectedItemsChanged($event, item, item.index)"
                     (mouseover)="onSelectionPending($event, item, item.index)"
                     [className]="item.isSelected === true ? 'selected' : 'unselected'">
